<resources>
    <string name="app_name">TaskApp</string>
    <string name="action_settings">Settings</string>

    <string name="input_title_hint">タイトル</string>
    <string name="input_category_hint">カテゴリー</string>
    <string name="input_content_hint">内容</string>
    <string name="create_category_hint">作成</string>
    <string name="button_date_text">----/--/--</string>
    <string name="button_time_text">--:--</string>
    <string name="button_done_text">決定</string>
</resources>