<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InputActivity"
    tools:showIn="@layout/activity_input">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/input_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/input_category_spinner"
        android:layout_width="314dp"
        android:layout_height="44dp"
        android:layout_below="@id/title_edit_text"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/category_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_edit_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="315dp"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/input_category_spinner"
        android:hint="@string/create_category_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/title_edit_text"
        android:layout_marginTop="47dp"
        android:hint="@string/input_content_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_edit_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="39dp"
        android:layout_toStartOf="@+id/time_button"
        android:text="@string/button_date_text"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@id/time_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_edit_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="3dp"
        android:text="@string/button_time_text" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:text="@string/button_done_text" />

</RelativeLayout>